--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -1,6 +1,9 @@
 name: Pipeline
 
 on:
+  push:
+    tags:
+      - "v*"
   pull_request:
     branches:
       - main
@@ -12,4 +15,10 @@ on:
 jobs:
   analysis:
     name: Analysis
-    uses: ./.github/workflows/analysis.yml
+    uses: ./.github/workflows/analysis.yaml
+
+  release:
+    name: Release
+    needs: analysis
+    if: startsWith(github.ref, 'refs/tags/v')
+    uses: ./.github/workflows/release.yaml
