--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -4,8 +4,8 @@ on:
   workflow_call:
 
 jobs:
-  Lint-Go:
-    name: Lint Go
+  compile:
+    name: Compile and Publish
     runs-on: ubuntu-latest
     permissions:
       contents: write
