--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -22,3 +22,4 @@ jobs:
     needs: analysis
     if: startsWith(github.ref, 'refs/tags/v')
     uses: ./.github/workflows/release.yaml
+    secrets: inherit
