--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -41,21 +41,18 @@ brews:
     url_template: "https://github.com/aquia-inc/emberfall/releases/download/{{ .Tag }}/{{ .ArtifactName }}"
     url_headers:
       - "Accept: application/octet-stream"
-      - 'Authorization: bearer #{ENV["HOMEBREW_GITHUB_API_TOKEN"]}'
     download_strategy: CurlDownloadStrategy
     commit_author:
-      name: Richard Jones
-      email: richard.jones@aquia.io
+      name: goreleaserbot
+      email: goreleaserbot@aquia.us
     commit_msg_template: "Brew formula update for {{ .ProjectName }} version {{ .Tag }}"
     directory: Formula
     description: "Smoke testing for HTTP services made easy!"
     repository:
       owner: aquia-inc
       name: emberfall
-      branch: main
+      branch: brew-releases/{{ .Version }}
+      token: "{{ .Env.GITHUB_TOKEN }}"
       pull_request:
         enabled: true
-        draft: true
-      git:
-        url: 'ssh://git@github.com/aquia-inc/emberfall.git'
-        private_key: '{{ .Env.PRIVATE_KEY_PATH }}'
+        draft: false
