--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -24,7 +24,9 @@ jobs:
 
   release:
     name: Release
-    needs: analysis
+    needs: 
+      - analysis
+      - tests
     if: startsWith(github.ref, 'refs/tags/v')
     uses: ./.github/workflows/release.yaml
     secrets: inherit
