fix: emberfall exits with code 0 even on failing tests (#14)
## Added

.github/workflows/tests workflow which sets up and executes
[BATS](https://github.com/bats-core/bats-action)
tests/cli.bats which defines BATS tests to run against the CLI binary

## Changed
- .github/workflows/pipeline to enable the new tests workflow
- internal/engine/
  - exit non zero when tests contain errors
  - convert struct tags from json to yaml
  - added follow redirect flag as bool
  - using http.Client instead of DefaultClient


closes #13

--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -17,9 +17,16 @@ jobs:
     name: Analysis
     uses: ./.github/workflows/analysis.yaml
 
+  tests:
+    name: Tests
+    needs: analysis
+    uses: ./.github/workflows/tests.yaml
+
   release:
     name: Release
-    needs: analysis
+    needs: 
+      - analysis
+      - tests
     if: startsWith(github.ref, 'refs/tags/v')
     uses: ./.github/workflows/release.yaml
     secrets: inherit
